other-mpol/inject-sidecar-deployment/.kyverno-test/exception-resource.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exception-deployment
  namespace: team-a
  annotations: {vault.hashicorp.com/agent-inject: "true"}
spec:
  selector: {matchLabels: {app: exception}}
  template:
    metadata: {labels: {app: exception}}
    spec: {containers: [{name: app, image: nginx:latest}]}
