other-mpol/inject-sidecar-deployment/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: inject-sidecar
policies:
- ../inject-sidecar-deployment.yaml
resources:
- resource.yaml
- exception-resource.yaml
exceptions:
- exception.yaml
results:
- kind: Deployment
  patchedResources: patchedResource1.yaml
  policy: inject-sidecar
  resources:
  - mydeploy-1
  result: pass
  isMutatingPolicy: true
- kind: Deployment
  policy: inject-sidecar
  resources: [exception-deployment]
  result: skip
  isMutatingPolicy: true
- kind: Deployment
  patchedResources: patchedResource2.yaml
  policy: inject-sidecar
  resources:
  - mydeploy-2
  result: skip
  isMutatingPolicy: true
